# NTRUlib

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
cmake/: config.h.in
include/: config.h  debug.h  debug_memory.h  hashtable.h  integer_arithmetic.h  memory.h  ntru.h  polynomial.h  polynominal.h  quotient_polynomial_ring.h  quotient_polynominal_ring.h  rationals.h
src/: debug.c  hashtable.c  integer_arithmetic.c  memory.c  ntru.c  polynomial.c  polynominal.c  quotient_polynomial_ring.c  quotient_polynominal_ring.c  rationals.c
tests/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ntru_test  polynomial_test  rationals_test  unit_test
tests/src/: ntru_test.c  polynomial_test.c  polynominal_test.c  rationals_test.c
